# puzzles

./: .gitignore  Cargo.toml  README.md
benches/: sudoku.rs
data/camping/maps/: map01.txt  map02.txt  map03.txt  map06.txt  map07.txt  map10.txt  map11.txt  map12.txt  map13.txt  map14.txt  map15.txt  map16.txt  map17.txt  map18.txt  map19.txt  map20.txt  map21.txt  map22.txt  map23.txt  map24.txt  map4.txt  map5.txt  map8.txt  map9.txt
data/sudoku/grids/: qqwing_easy.txt  qqwing_expert.txt  qqwing_intermediate.txt  qqwing_simple.txt
src/: camping.rs  lib.rs  location.rs  sudoku.rs
src/camping/: map.rs  solver.rs
src/sudoku/: board.rs  group.rs  location_set.rs  solver.rs  value_set.rs
