[package]
name = "puzzles"
version = "0.1.0"
edition = "2021"
default-run = "puzzle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
bitvec = "1.0.1"
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
ndarray = { version = "0.15.6", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.52"
